@@ -15,6 +15,7 @@ import org.simpleframework.xml.Attribute;
 import org.simpleframework.xml.Text;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 
@@ -118,7 +119,7 @@ public class Flag implements Parcelable {
     public static List<Flag> create(String flag, String name, String url) {
         Flag item = Flag.create(flag);
         item.getEpisodes().add(Episode.create(name, url));
-        return List.of(item);
+        return Arrays.asList(item);
     }
 
     @Override
